Your message here: e.g. 'new version roaad trip planner and updated .gitignore to exclude uploads folder'

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ __pycache__/
 *.pyc
 # Ignore .env file
 .env
+# Ignore specific uploaded PDFs
+uploads/report_cards.pdf
+uploads/teacher_feedback.pdf
+
+# Optional: ignore all PDFs in uploads
+ uploads/*.pdf
+
+# Optional: ignore entire uploads folder
+ uploads/
